[gd_scene load_steps=9 format=3 uid="uid://cyqru62e3i8um"]

[ext_resource type="Script" path="res://scenes/study_rooms.gd" id="1_lp26l"]
[ext_resource type="FontFile" uid="uid://7x61o34kfaic" path="res://fonts/KOMIKAX_.ttf" id="2_5eghl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ce41w"]
bg_color = Color(0.266667, 0.266667, 0.266667, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 0.843137, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_18dpk"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ml5w"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(1, 0.843137, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e1n4y"]
bg_color = Color(0.266667, 0.266667, 0.266667, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 0.843137, 0, 1)
border_blend = true

[sub_resource type="Theme" id="Theme_u8ne5"]
Button/font_sizes/font_size = 18
Button/styles/normal = SubResource("StyleBoxFlat_ce41w")
Label/font_sizes/font_size = 18
Label/styles/normal = SubResource("StyleBoxFlat_18dpk")
Panel/styles/panel = SubResource("StyleBoxFlat_2ml5w")
TextEdit/font_sizes/font_size = 18
TextEdit/styles/normal = SubResource("StyleBoxFlat_e1n4y")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d7blh"]
bg_color = Color(0, 0, 0, 1)

[node name="StudyRooms" type="Node2D"]
script = ExtResource("1_lp26l")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme = SubResource("Theme_u8ne5")

[node name="Label" type="Label" parent="Panel"]
offset_left = 440.0
offset_top = 28.0
offset_right = 733.0
offset_bottom = 95.0
theme_override_colors/font_shadow_color = Color(0.541176, 0.45098, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("2_5eghl")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_d7blh")
text = "Study Rooms"

[node name="group1" type="Label" parent="Panel"]
offset_left = 255.0
offset_top = 130.0
offset_right = 643.0
offset_bottom = 175.0

[node name="group2" type="Label" parent="Panel"]
offset_left = 255.0
offset_top = 200.0
offset_right = 643.0
offset_bottom = 245.0

[node name="group3" type="Label" parent="Panel"]
offset_left = 255.0
offset_top = 270.0
offset_right = 643.0
offset_bottom = 315.0

[node name="group4" type="Label" parent="Panel"]
offset_left = 255.0
offset_top = 340.0
offset_right = 643.0
offset_bottom = 385.0

[node name="group5" type="Label" parent="Panel"]
offset_left = 255.0
offset_top = 410.0
offset_right = 643.0
offset_bottom = 455.0

[node name="TextEdit" type="TextEdit" parent="Panel"]
offset_left = 149.0
offset_top = 505.0
offset_right = 388.0
offset_bottom = 552.0
theme_override_font_sizes/font_size = 18
placeholder_text = "Enter study room name"

[node name="goback" type="Button" parent="Panel"]
offset_left = 1026.0
offset_top = 582.0
offset_right = 1126.0
offset_bottom = 628.0
text = "Go Back"

[node name="createnew" type="Button" parent="Panel"]
offset_left = 26.0
offset_top = 574.0
offset_right = 276.0
offset_bottom = 624.0
text = "Create new study room"

[node name="join" type="Button" parent="Panel"]
offset_left = 293.0
offset_top = 573.0
offset_right = 543.0
offset_bottom = 623.0
text = "Join study room"

[node name="chat1" type="Button" parent="Panel"]
offset_left = 709.0
offset_top = 130.0
offset_right = 820.0
offset_bottom = 176.0
text = "Chat"

[node name="chat2" type="Button" parent="Panel"]
offset_left = 708.0
offset_top = 200.0
offset_right = 819.0
offset_bottom = 246.0
text = "Chat"

[node name="chat3" type="Button" parent="Panel"]
offset_left = 709.0
offset_top = 270.0
offset_right = 820.0
offset_bottom = 316.0
text = "Chat"

[node name="chat4" type="Button" parent="Panel"]
offset_left = 709.0
offset_top = 340.0
offset_right = 820.0
offset_bottom = 386.0
text = "Chat"

[node name="chat5" type="Button" parent="Panel"]
offset_left = 709.0
offset_top = 410.0
offset_right = 820.0
offset_bottom = 456.0
text = "Chat"

[node name="InvalidUser" type="Label" parent="Panel"]
visible = false
offset_left = 638.0
offset_top = 583.0
offset_right = 892.0
offset_bottom = 627.0
theme_override_colors/font_color = Color(0.968627, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Room does not exist"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/goback" to="." method="_on_goback_pressed"]
[connection signal="pressed" from="Panel/createnew" to="." method="_on_createnew_pressed"]
[connection signal="pressed" from="Panel/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Panel/chat1" to="." method="_on_chat_1_pressed"]
[connection signal="pressed" from="Panel/chat2" to="." method="_on_chat_2_pressed"]
[connection signal="pressed" from="Panel/chat3" to="." method="_on_chat_3_pressed"]
[connection signal="pressed" from="Panel/chat4" to="." method="_on_chat_4_pressed"]
[connection signal="pressed" from="Panel/chat5" to="." method="_on_chat_5_pressed"]
